WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127828
Crashes in ViewGestureController::wheelEventWasNotHandledByWebCore
https://bugs.webkit.org/show_bug.cgi?id=127828
Summary
Crashes in ViewGestureController::wheelEventWasNotHandledByWebCore
Tim Horton
Reported
2014-01-28 21:03:06 PST
It's impolite to dereference a null pointer. <
rdar://problem/15932902
>
Attachments
patch
(1.33 KB, patch)
2014-01-28 21:04 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-01-28 21:04:49 PST
Created
attachment 222553
[details]
patch
WebKit Commit Bot
Comment 2
2014-01-28 22:07:46 PST
Comment on
attachment 222553
[details]
patch Clearing flags on attachment: 222553 Committed
r163003
: <
http://trac.webkit.org/changeset/163003
>
WebKit Commit Bot
Comment 3
2014-01-28 22:07:49 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug