Crashes in ViewGestureController::wheelEventWasNotHandledByWebCore https://bugs.webkit.org/show_bug.cgi?id=127828 <rdar://problem/15932902>

Reviewed by Dan Bernstein.

* UIProcess/API/mac/WKView.mm:
(-[WKView _wheelEventWasNotHandledByWebCore:]):
Null check. ViewGestureController only needs unhandled wheel events after it has been created.


Canonical link: https://commits.webkit.org/145832@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163003 268f45cc-cd09-0410-ab3c-d52691b4dbfc